--- a/The Ark.html
+++ b/The Ark.html
@@ -3,6 +3,15 @@
 <head>
   <title>The Ark</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-CMNYCNWH8K"></script>
+ <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CMNYCNWH8K');
+ </script>
 </head>
 <body>
 <h1><a href="https://search.naver.com/search.naver?sm=top_hty&fbm=1&ie=utf8&query=%EB%94%94%EC%95%84%ED%81%AC"
@@ -35,6 +44,8 @@
  table {border: 1px solid red; border-collapse: collapse;}
  tr, td {border: 1px solid grey;}
 </style>
+<iframe width="853" height="480" src="https://www.youtube.com/embed/c-cOZgaotPY" frameborder="0"
+allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div id="disqus_thread"></div>
 <script>
 
@@ -55,4 +66,17 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5e590015a89cda5a1888728b/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
